Removed check style and PMD issue.
SVN-Revision: 23376